--- a/docs/生活/随笔/我的原神旅行观测记录.md
+++ b/docs/生活/随笔/我的原神旅行观测记录.md
@@ -20,15 +20,15 @@
 
 <br/>
 
-原神 旅行者 [米游社]( https://bbs.mihoyo.com/ys/ )
-
-提瓦特 蒙德 璃月 层岩巨渊 稻妻 须弥
-
-班尼特 芭芭拉 丽莎 香菱 安柏 凯亚 凝光 提纳里 雷电将军
+原神 旅行者 [米游社]( https://bbs.mihoyo.com/ys/ ) <br/>
+提瓦特 蒙德 璃月 层岩巨渊 稻妻 须弥 <br/>
+班尼特 芭芭拉 丽莎 香菱 安柏 凯亚 凝光 提纳里 雷电将军 <br/>
 
 <br/>
 
 ### 1.2、网站
+
+> 相关网站
 
 | 序号   | 网站        |  地址          |  说明          |
 | -----  | ----------- |  ------------- |  ------------- |
@@ -39,49 +39,43 @@
 | 5      | [莫娜占卜铺]( https://www.mona-uranai.com/intro )                          | https://www.mona-uranai.com/intro      					   | 工具 |
 | 6      | [原神伤害计算]( https://genshin-calc.sirokuma.cc/ )                        | https://genshin-calc.sirokuma.cc/      					   | 工具 |
 | 7      | [nga社区]( https://nga.178.com/thread.php?fid=650 )                        | https://nga.178.com/thread.php?fid=650 					   | 论坛 |
-| 8      | [原神TapTap社区]( https://www.taptap.cn/app/168332/topic )                 | https://www.taptap.cn/app/168332/topic 					   | 论坛 |
-| 9      | [原神贴吧]( https://tieba.baidu.com/f?kw=%E5%8E%9F%E7%A5%9E )              | https://tieba.baidu.com/f?kw=%E5%8E%9F%E7%A5%9E            | 论坛 |
+| 8      | [TapTap]( https://www.taptap.cn/app/168332/topic )                 | https://www.taptap.cn/app/168332/topic 					   | 论坛 |
+| 9      | [贴吧]( https://tieba.baidu.com/f?kw=%E5%8E%9F%E7%A5%9E )              | https://tieba.baidu.com/f?kw=%E5%8E%9F%E7%A5%9E            | 论坛 |
+
+---
+
+> 我的文档
+
+| 序号   | 名称        |  时间          |
+| -----  | ----------- |  ------------- |
+| 1      | 《[我的原神旅行观测记录]( https://xushufa.cn/docs/sheng-huo/sui-bi/wo-de-yuan-shen-lu-xing-guan-ce-ji-lu.html )》            | 2022-11-24 |
+| 2      | 《[纪念一下，三百天打满深渊]( https://vuepress-blog.xushufa.cn/%E7%94%9F%E6%B4%BB/%E9%9A%8F%E7%AC%94/%E7%BA%AA%E5%BF%B5%E4%B8%80%E4%B8%8B%EF%BC%8C%E4%B8%89%E7%99%BE%E5%A4%A9%E6%89%93%E6%BB%A1%E6%B7%B1%E6%B8%8A.html )》  | 2023-08-04  |
+| 3      | 《[原神历史版本祈愿up活动速递]( https://gitcode.net/xu180/document/-/blob/master/article/%E9%9A%8F%E7%AC%94/%E5%8E%9F%E7%A5%9E%E5%8E%86%E5%8F%B2%E7%89%88%E6%9C%AC%E7%A5%88%E6%84%BFup%E6%B4%BB%E5%8A%A8%E9%80%9F%E9%80%92.md )》          | 2023-08-22 |
+| 4      | [原神图片]( https://agit.ai/xuyq/document/src/branch/master/imgs/yuanshen )  &ensp; [练度]( https://sourceforge.net/p/xdocument/code/ci/master/tree/imgs/yuanshen/%E6%88%91%E7%9A%84/ ) &ensp; [二创图]( https://bitbucket.org/xu12345/document/src/master/imgs/yuanshen/ )          | from 2022 |
 
 
 <br/>
 
 ### 1.3、快捷键
 
-> 原神电脑端操作快捷键
+> 原神电脑端快捷键
 
-E-元素战技							<br/>
-Q-元素爆发                          <br/>
-F-拾取                              <br/>
-J-任务页面                          <br/>
-C-角色页面                          <br/>
-B-背包                              <br/>
-L-编队                              <br/>
-                                    <br/>
-O-好友                              <br/>
-G-教程                              <br/>
-M-地图                              <br/>
-V-追踪                              <br/>
-P-中端挑战                          <br/>
-Y-通知详情                          <br/>
-                                    <br/>
-F1-冒险之证                         <br/>
-F2-联机                             <br/>
-F3-抽卡祈愿                         <br/>
-F4-纪行                             <br/>
-F5-活动                             <br/>
-                                    <br/>
-AWSD-角色移动                       <br/>
-12345-切换角色                      <br/>
-鼠标滚轮-元素视野                   <br/>
-鼠标左键-普通攻击                   <br/>
-鼠标右键或左shift-冲刺              <br/>
-                                    <br/>
-space-起飞/降落/攀爬时向上跳        <br/>
-ESC-打开派蒙界面                    <br/>
-Enter-聊天页面                      <br/>
-Ctrl-切换走路/跑步状态              <br/>
 
----
+| 快捷键 | 快捷键 | 快捷键 | 快捷键 |
+| ------ | ------ | ------ | ------ |
+| **Q-元素爆发** | W-向前 | E-元素战技   | R-瞄准      |
+| Y-通知详情 | U-特殊环境说明 | O-好友   | P-中断挑战  |
+| **A-向左** | S-向后 | D-向右  | F-拾取 |
+| G-教程 | J-任务页面 | L-编队  |        |
+| **Z-小道具** | X-落下 | C-角色解密  | V-追踪   |
+| B-背包 | M-地图 |     |    |
+| **F1-冒险之证**  | F2-联机 | F3-抽卡祈愿 | F4-纪行  |
+| F5-活动  | F6-玩法系统  | F7-摆设   |    |
+| **12345-切换角色**  | 鼠标滚轮-元素视野  | 鼠标左键-普通攻击  |  鼠标右键或左shift-冲刺  |
+| ESC-派蒙界面  | space-跳跃 | Enter-聊天  | Ctrl-切换走路/跑步状态   |
+
+
+<br/>
 
 ### 1.4、名词解释
 
@@ -103,16 +97,6 @@ Ctrl-切换走路/跑步状态              <br/>
 **技能**：a-普攻；z-重击；e-元素战技；q-元素爆发。
 
 <br/>
-
-### 1.5、我的文档
-
-| 序号   | 名称        |  时间          |
-| -----  | ----------- |  ------------- |
-| 1      | 《[我的原神旅行观测记录]( https://xushufa.cn/docs/sheng-huo/sui-bi/wo-de-yuan-shen-lu-xing-guan-ce-ji-lu.html )》            | 2022-11-24 |
-| 2      | 《[纪念一下，三百天打满深渊]( https://vuepress-blog.xushufa.cn/%E7%94%9F%E6%B4%BB/%E9%9A%8F%E7%AC%94/%E7%BA%AA%E5%BF%B5%E4%B8%80%E4%B8%8B%EF%BC%8C%E4%B8%89%E7%99%BE%E5%A4%A9%E6%89%93%E6%BB%A1%E6%B7%B1%E6%B8%8A.html )》  | 2023-08-04  |
-| 3      | 《[原神历史版本祈愿up活动速递]( https://gitcode.net/xu180/document/-/blob/master/article/%E9%9A%8F%E7%AC%94/%E5%8E%9F%E7%A5%9E%E5%8E%86%E5%8F%B2%E7%89%88%E6%9C%AC%E7%A5%88%E6%84%BFup%E6%B4%BB%E5%8A%A8%E9%80%9F%E9%80%92.md )》          | 2023-08-22 |
-| 4      | [原神图片]( https://agit.ai/xuyq/document/src/branch/master/imgs/yuanshen )  &ensp; [练度]( https://sourceforge.net/p/xdocument/code/ci/master/tree/imgs/yuanshen/%E6%88%91%E7%9A%84/ ) &ensp; [二创图]( https://bitbucket.org/xu12345/document/src/master/imgs/yuanshen/ )          | from 2022 |
-
 
 
 ## 2、旅行者
@@ -324,7 +308,7 @@ xp党指喜欢、偏爱，外貌协会。雷神既是xp党也是强度党。 <br
 上个版本3.3雷电将军版本非酋本酋，运气太差，100多抽大保底只出了一金零命雷神。<br/>
 这个版本3.4夜兰胡桃版本运气爆棚，欧皇附体，100多抽三金小保底**夜兰胡桃护摩之仗**。<br/>
 本来是想着零命夜兰，痴想一下一命。也只准备了夜兰的材料和武器。
-但是昨天在抽卡之前跟我一个大佬同事说了一下，一队雷国配齐了，二队还没影子。建议我如果抽到夜兰可以再抽胡桃，然后竟然真的都抽到了，再来个骚操作，反向定轨夜兰专武若水，不到十抽竟然又获得了胡桃专武护摩。<br/>
+但是昨天在抽卡之前跟我一个大佬同事说了一下，一队雷国配齐了，二队还没影子。建议我如果抽到夜兰可以再抽胡桃，然后竟然真的都抽到了，再来个骚操作，反向定轨夜兰专武若水，不到十抽（总共四十多抽）竟然又获得了胡桃专武护摩。<br/>
 人生的大起大落实在是太突然了，一个多月前还只有一个常驻五星提纳里，而现在t0级两支队伍都有了。<br/>
 
 <br/>
@@ -516,12 +500,95 @@ https://docs.qq.com/sheet/DSnhpZlZ6VGNtd2p0?tab=000001
 5、寻找仙灵、限时挑战、[隐藏任务]( https://www.miyoushe.com/ys/accountCenter/collectionList?id=329557052 )、声望任务、微解密。圣章石、元能火种、道具收集。 <br/>
 6、收集[书籍]( https://www.miyoushe.com/ys/article/35039610 )，同时寻宝罗盘找宝箱。尤其是页数较多的书，例如千夜故事集、鹮巷物语。 <br/>
 7、逛大世界，总有漏网之鱼，意外之喜。水米游社，常见亮眼之作，醒脑之谈。         <br/>
-
-
+--20240105
 
 
 <br/>
 
+```
+--探索度百分百继续寻找遗漏宝箱的方法--
+
+
+基础探索：
+世界任务、魔神任务、邀约任务、委托、声望、神瞳、成就、仙灵。
+雪山忍冬之树、稻妻神樱树、渊下宫键纹、层岩流明石、桓那兰那梦之树、花海甘露池、枫丹露景泉。
+
+
+进阶探索：
+隐藏任务、阴间宝箱、元素方碑、限时挑战、收集物品、地方特产。
+
+
+同步探索：
+尘歌壶 奇馈宝箱、旋曜玉帛、角色赠礼。
+
+
+
+基础探索完成之后，探索度有八九十了。
+开始进行进阶探索，寻找隐藏任务的宝箱和元素之印。
+这一步可以在百分百探索度的基础上继续补充寻找遗漏的宝箱获取原石。
+下面是七国隐藏任务简单列举：
+
+
+--蒙德--
+时与风
+等量交换
+雪山喂狐
+
+
+--璃月--
+靖世九柱
+夜叉之愿
+藏石者言
+宝藏归离
+怀宝应自珍
+加尔恰的赞歌
+循仙踪兮天遒
+
+
+--稻妻--
+林藏的信
+幽灵船工
+幽灵知世
+特别的御神签
+小卷婆婆的占卜
+
+
+--须弥--
+石锁
+死域
+森林书
+沙漠书
+圣章石
+元能火种
+幻梦之门
+甘露晶石
+千夜故事集
+
+
+--枫丹--
+飞行器
+侦测晶体
+地方传奇
+海面浮标
+荒芒机关
+揭示之书
+悠悠海獭
+神秘的矿石
+神秘的书页
+奇特的零件
+
+
+--五国--
+微解密
+蓬蓬果
+跟随光标
+元素方碑
+限时挑战
+指引仙灵
+
+--20230116
+
+```
 
 
 ## 3、观测枢
