--- a/docs/生活/随笔/我的原神旅行观测记录.md
+++ b/docs/生活/随笔/我的原神旅行观测记录.md
@@ -774,7 +774,7 @@ lv1-90等级突破材料： <br/>
 水神[芙宁娜]( https://bbs.mihoyo.com/ys/obc/content/500291 ) 众水、众方、众民与众法律的女王。多功能辅助角色，增伤回血，凝冰渡河，自动打怪。
 
 升级材料                <br/>
-1.天赋突破材料          <br/>
+天赋突破材料            <br/>
 1、2级突破：正义的教导3、骗骗花蜜6、12500摩拉                                       <br/>
 2、3级突破：正义的指引2、微光花蜜3、17500摩拉                                       <br/>
 3、4级突破：正义的指引4、微光花蜜4、25000摩拉                                       <br/>
@@ -785,7 +785,7 @@ lv1-90等级突破材料： <br/>
 8、9级突破：正义的哲学12、原素花蜜9、无光质块2、450000摩拉                          <br/>
 9、10级突破：正义的哲学16、原素花蜜6、无光质块2、智识之冕1、700000摩拉              <br/>
                                                                                     <br/>
-2.等级突破材料                                                                          <br/>
+等级突破材料                                                                        <br/>
 20级：涤净青金碎屑1、湖光铃兰3、骗骗花蜜3、2万摩拉                              <br/>
 40级：涤净青金断片3、未能达成超越之水2、湖光铃兰 10、骗骗花蜜15、4万摩拉        <br/>
 50级：涤净青金断片6、未能达成超越之水4、湖光铃兰20、微光花蜜12、6万摩拉         <br/>
@@ -808,14 +808,14 @@ lv1-90等级突破材料： <br/>
 | 队伍     | 角色        | 说明       |
 | -------- | ----------- | ----------- |
 | 雷九万班 |  雷电将军、枫原万叶、班尼特、九条裟罗  | 刚需六命九条。零命雷神可用，二命更好。夜兰替换九条，雷夜万班也不错。 |
-| 神鹤万心 |  绫华、申鹤、心海、万叶 	            | 神甘万心也可，甘雨代替申鹤。神罗万猫也能玩，罗莎莉亚、迪奥娜。 |
+| 神鹤万心 |  绫华、申鹤、心海、万叶 	            | 神甘万心也可，甘雨代替申鹤。神罗万猫也能玩，罗莎莉亚、迪奥娜。 		|
 | 胡行钟夜 |  胡桃、行秋、钟离、夜兰	            | 双水：胡行钟莫（莫娜）。双岩：胡行钟阿（阿贝多）。 |
 | 万达国际 |  万叶、公子、班尼特、香菱	            |  |
 | 宵夜钟云 |  宵宮、夜兰、钟离、云堇                |  |
 | 雷神国家 |  雷神、行秋、班尼特、香菱	            |  性价比最高，一金即可。一命班尼特完全体，四命香菱延长旋火轮时间。夜兰替换行秋更强。 |
 | 妮露绽放 |  妮露+心海+**纳西妲**+草主  	        |  |
 | 提八妲钟 |  提纳里+八重神子+纳西妲+钟离           |  |
-| 玉皇妲帝 |  刻晴+皇女+纳西妲+钟离 	            |  刻晴激化 |
+| 玉皇妲帝 |  刻晴+菲谢尔+纳西妲+钟离 	            |  璃月七星玉衡星刻晴、皇女菲谢尔、草神纳西妲，帝有两位：岩王帝君钟离和叶天帝枫原万叶。 |
 | 纳行久海 |  纳西妲+久岐忍+行秋+艾尔海森           |  草行久加海哥，安逸强大 |
 | 那芙万白 |  那维莱特、芙宁娜、万叶、白术          |  又名百万伏特，最强配队 |
 | 影夜琴芙 |  雷电将军、夜兰、芙宁娜、琴            |  水神芙宁娜最佳配队     |
@@ -1142,10 +1142,10 @@ lv1-90等级突破材料： <br/>
    <tr height="18" style='height:13.50pt;'>
     <td class="xl65" x:str>魈</td>
     <td class="xl65" x:str>重云</td>
-    <td class="xl65"></td>
+    <td class="xl65">闲云</td>
    </tr>
    <tr height="18" style='height:13.50pt;'>
-    <td class="xl65" x:str></td>
+    <td class="xl65" x:str>嘉明</td>
     <td class="xl65" x:str>瑶瑶</td>
     <td class="xl65"></td>
    </tr>
@@ -1321,9 +1321,9 @@ lv1-90等级突破材料： <br/>
     <td class="xl65" x:str>莱欧斯利</td>
    </tr>
    <tr height="18" style='height:13.50pt;'>
-    <td class="xl65" x:str></td>
+    <td class="xl65" x:str>娜维娅</td>
     <td class="xl65" x:str>夏洛蒂</td>
-    <td class="xl65" x:str></td>
+    <td class="xl65" x:str>夏沃蕾</td>
    </tr>
    <![if supportMisalignedColumns]>
     <tr width="0" style='display:none;'/>
