--- a/docs/生活/随笔/健身与学习.md
+++ b/docs/生活/随笔/健身与学习.md
@@ -100,6 +100,8 @@
 202211--
 ```
 
+---
+
 ## 2023
 
 ```
@@ -110,6 +112,8 @@
 乔迁新居 新的生活
 注重饮食 少点外卖
 ```
+
+---
 
 ## 2024
 
@@ -122,4 +126,15 @@
 
 ```
 
+---
 
+## 2025
+
+```
+内外兼修
+变是唯一的不变
+
+打算买辆二手车，外出转转。
+尽量少玩原神鸣潮，多读读书。
+
+```
