--- a/docs/生活/随笔/我的原神旅行观测记录.md
+++ b/docs/生活/随笔/我的原神旅行观测记录.md
@@ -10,11 +10,11 @@
 
 ### 1.1、介绍
 
-《我的原神旅行观测记录》，又名《[原神之旅]( https://xushufa.cn/docs/sheng-huo/sui-bi/wo-de-yuan-shen-lu-xing-guan-ce-ji-lu.html )》，记之以事，述之以情。<br/>
+《我的原神旅行观测记录》，又名《[原神之旅]( https://scott180.github.io/reco-blog/docs/sheng-huo/sui-bi/wo-de-yuan-shen-lu-xing-guan-ce-ji-lu.html )》，记之以事，述之以情。<br/>
 自二零二二年十一月初开始下载原神，第一次玩这款全球知名游戏。安装包300多兆，但是装好后还要下载18g的资源，确实很大。<br/>
 之前只玩过功能比较简单、内容相对单一的游戏，像qq农场、部落冲突、天天酷跑、和平精英等等。<br/>
 世界规模如此巨大，内容剧情如此精彩，画面色彩如此绚丽的游戏还是首次接触。<br/>
-想不到一接触就入迷了，一入迷难以自拔，故此[记录]( https://gitcode.net/xu180/document/-/blob/master/article/%E9%9A%8F%E7%AC%94/%E6%88%91%E7%9A%84%E5%8E%9F%E7%A5%9E%E6%97%85%E8%A1%8C%E8%A7%82%E6%B5%8B%E8%AE%B0%E5%BD%95.md )，以作旅行感想。<br/>
+想不到一接触就入迷了，一入迷难以自拔，故此[记录]( https://gitlab.com/xuyq123/document/-/blob/main/article/%E9%9A%8F%E7%AC%94/%E6%88%91%E7%9A%84%E5%8E%9F%E7%A5%9E%E6%97%85%E8%A1%8C%E8%A7%82%E6%B5%8B%E8%AE%B0%E5%BD%95.md )，以作旅行感想。<br/>
 原神UID：254901679，欢迎加好友。文档记录于个人网站，欢迎浏览。<br/>
 --20221124
 
@@ -48,8 +48,8 @@
 
 | 序号   | 名称        |  时间          |
 | -----  | ----------- |  ------------- |
-| 1      | 《[我的原神旅行观测记录]( https://xushufa.cn/docs/sheng-huo/sui-bi/wo-de-yuan-shen-lu-xing-guan-ce-ji-lu.html )》            | 2022-11-24 |
-| 2      | 《[纪念一下，三百天打满深渊]( https://vuepress-blog.xushufa.cn/%E7%94%9F%E6%B4%BB/%E9%9A%8F%E7%AC%94/%E7%BA%AA%E5%BF%B5%E4%B8%80%E4%B8%8B%EF%BC%8C%E4%B8%89%E7%99%BE%E5%A4%A9%E6%89%93%E6%BB%A1%E6%B7%B1%E6%B8%8A.html )》  | 2023-08-04  |
+| 1      | 《[我的原神旅行观测记录]( https://scott180.github.io/reco-blog/docs/sheng-huo/sui-bi/wo-de-yuan-shen-lu-xing-guan-ce-ji-lu.html )》            | 2022-11-24 |
+| 2      | 《[纪念一下，三百天打满深渊]( https://scott180.github.io/vuepress-blog/%E7%94%9F%E6%B4%BB/%E9%9A%8F%E7%AC%94/%E7%BA%AA%E5%BF%B5%E4%B8%80%E4%B8%8B%EF%BC%8C%E4%B8%89%E7%99%BE%E5%A4%A9%E6%89%93%E6%BB%A1%E6%B7%B1%E6%B8%8A.html )》  | 2023-08-04  |
 | 3      | 《[原神历史版本祈愿up活动速递]( https://gitcode.net/xu180/document/-/blob/master/article/%E9%9A%8F%E7%AC%94/%E5%8E%9F%E7%A5%9E%E5%8E%86%E5%8F%B2%E7%89%88%E6%9C%AC%E7%A5%88%E6%84%BFup%E6%B4%BB%E5%8A%A8%E9%80%9F%E9%80%92.md )》          | 2023-08-22 |
 | 4      | [原神图片]( https://agit.ai/xuyq/document/src/branch/master/imgs/yuanshen )  &ensp; [练度]( https://sourceforge.net/p/xdocument/code/ci/master/tree/imgs/yuanshen/%E6%88%91%E7%9A%84/ ) &ensp; [二创图]( https://bitbucket.org/xu12345/document/src/master/imgs/yuanshen/ )          | from 2022 |
 
@@ -1348,7 +1348,7 @@ lv1-90等级突破材料： <br/>
 
 来自 https://bbs.mihoyo.com/ys/article/30600790
 
-<mermaid>
+```mermaid
 graph TD
 雷 --> | 感电 | 水;
 雷 --> | 超载 | 火;
@@ -1368,11 +1368,11 @@ graph TD
 冰 --> | 超导 | 雷;
 冰 --> | 冻结 | 水;
 
-</mermaid>
+```
 
 ---
 
-<mermaid>
+```mermaid
 graph LR
 元素反应 --> A1[增幅]
 元素反应 --> B1[剧变]
@@ -1411,7 +1411,7 @@ D11--> D121[草水]
 D12--> D122[草水雷]
 D13--> D123[草水火]
 
-</mermaid>
+```
 
 - 三种元素的超绽放烈绽放伤害最高。
 
@@ -1422,7 +1422,7 @@ D13--> D123[草水火]
 来自 https://bbs.mihoyo.com/ys/article/2050152
 
 
-<mermaid>
+```mermaid
 graph LR
 元素反应 --> A1[增伤类]
 元素反应 --> B1[额外伤害类]
@@ -1457,7 +1457,7 @@ C121--> C1211[结晶盾承受量仅与等级及元素精通有关]
 D11--> D121[水草]
 D12--> D122[水冰]
 
-</mermaid>
+```
 
 - 元素反应的伤害均与**触发角色**的**元素精通**有着密切的联系。
 - 两种元素，超载的群体伤害最高，感电的单体伤害最高。
