--- a/docs/目录.md
+++ b/docs/目录.md
@@ -10,6 +10,7 @@
   - [驾考记事](生活/随笔/驾考记事.md)
   - [健身与学习](生活/随笔/健身与学习.md)
   - [吉他练习笔记](生活/随笔/吉他练习笔记.md)
+  - [二手车购买攻略](生活/随笔/二手车购买攻略.md)
   - [二十四式太极拳](生活/随笔/二十四式太极拳.md)
   - [短期远行必备物品](生活/随笔/短期远行必备物品.md)
   - [我的原神旅行观测记录](生活/随笔/我的原神旅行观测记录.md)
@@ -18,7 +19,9 @@
 
 > 文档
 
+  - [古文诗词](生活/文档/古文诗词.md)
   - [如何练好书法](生活/文档/如何练好书法.md)
+  - [幽默话术100句](生活/文档/幽默话术100句.md)
   - [三千个脑筋急转弯](生活/文档/三千个脑筋急转弯.md)
   - [文言文翻译网络流行语](生活/文档/文言文翻译网络流行语.md)
   - [安徽电信免费流量获取方法](生活/文档/安徽电信免费流量获取方法.md)
@@ -70,6 +73,7 @@
   - [mongo](编程/数据库/mongo.md)
   - [数据库隔离级别](编程/数据库/数据库隔离级别.md)
   - [mysql开启log-bin日志](编程/数据库/mysql开启log-bin日志.md) 
+  - [mysql之explan索引优化说明](编程/数据库/mysql之explan索引优化说明.md) 
   
 > 资料
 
