--- a/docs/生活/文档/如何练好书法.md
+++ b/docs/生活/文档/如何练好书法.md
@@ -2,7 +2,7 @@
 
 <br />
 
-> [**地址**]( https://xushufa.cn ) &ensp; [gitlab]( https://gitlab.com/xuyq123/calligraphy ) &ensp; [coding]( https://xyqin.coding.net/public/my/calligraphy/git ) &ensp; [github]( https://github.com/scott180/calligraphy )
+> [**地址**]( https://scott180.github.io/reco-blog ) &ensp; [gitlab]( https://gitlab.com/xuyq123/calligraphy ) &ensp; [coding]( https://xyqin.coding.net/public/my/calligraphy/git ) &ensp; [github]( https://github.com/scott180/calligraphy )
 
 <br />
 
