--- a/docs/生活/随笔/驾考记事.md
+++ b/docs/生活/随笔/驾考记事.md
@@ -4,7 +4,7 @@
 
 > 2018合肥安农大驾校考驾照记事
 
-> 2022首发于我的博客[xushufa.cn]( https://xushufa.cn )
+> 2022首发于我的博客[gitlab]( https://gitlab.com/xuyq123/document/-/blob/main/article/%E9%9A%8F%E7%AC%94/%E9%A9%BE%E8%80%83%E8%AE%B0%E4%BA%8B.md )
 
 ---
 
@@ -14,8 +14,8 @@
 
 > 20180325  周日  报名
 
-- 昨天3月24在蓝鼎海棠湾附近的驾校：八一驾照和五星驾校看了下，了解了情况。周日在天湖路安农大驾校（公司附近-合肥驰远创业园的苏迪科技）报名了，2840元报名费，下周三下午13:30-15:00体检40元，拍照16元。
-- 需再去海关路的高新区派出所办理居住证。以后科目一二三四驾管所考试费520元（科目一40元，科目二240元，科目三考试费240元 考试前后交都行）。
+- 昨天3月24在蓝鼎海棠湾附近的驾校，八一驾照和五星驾校看了下，了解了情况。周日在天湖路安农大驾校（公司附近-合肥驰远创业园的苏迪科技）报名了，2840元报名费，下周三下午13:30-15:00体检40元，拍照16元。
+- 再去海关路的高新区派出所办理居住证。以后科目一二三四驾管所考试费520元（科目一40元，科目二240元，科目三考试费240元 考试前后交）。
 
 ---
 
@@ -34,7 +34,7 @@
 
 > 20180408  周日 账号受理通知
 
-- 前三天4月5、6、7号清明节放假。今天周日上班。收到安徽交警短信通知，在交管12123的账号注册受理成功。
+- 前三天4月5,6,7清明节放假。今天周日上班。收到安徽交警短信通知，在交管12123的账号注册受理成功。
 - 然后大概要等两个礼拜左右审核通过才能预约科目一考试。
 
 ---
@@ -340,7 +340,7 @@
 
 > 20181027 拿驾照
 
-- 午两点半左右带上身份证在安农大驾校总部，签字，拿到驾照和一个实习标志。
+- 下午两点半左右带上身份证在安农大驾校总部，签字，拿到驾照和一个实习标志。
 
 ---
 
@@ -393,8 +393,8 @@
 - 停车时，踩离合踩刹车，挂空挡，拉手刹，解安全带，下车。
 
 
-![img1]( https://bitbucket.org/xu12345/document/raw/114a5f5c292cc412cd46304dc1d20cfda7c7a7f8/imgs/jiazhao/jiazhao_20180602001.png )
-![img2]( https://bitbucket.org/xu12345/document/raw/114a5f5c292cc412cd46304dc1d20cfda7c7a7f8/imgs/jiazhao/jiazhao_20180602002.png )
+![img1]( https://xyqin.coding.net/p/my/d/document/git/raw/master/imgs/jiazhao/jiazhao_20180602001.png )
+![img2]( https://xyqin.coding.net/p/my/d/document/git/raw/master/imgs/jiazhao/jiazhao_20180602002.png )
 
 ---
 
@@ -416,7 +416,7 @@
 - 6、车子与库平行时，方向盘左转一圈。
 - 7、左视镜下边沿过库边线，停车。踩离合，踩刹车，挂空挡，拉手刹。开安全带。下车。
 
-![img3]( https://bitbucket.org/xu12345/document/raw/114a5f5c292cc412cd46304dc1d20cfda7c7a7f8/imgs/jiazhao/jiazhao_20180607001.png )
+![img3]( https://xyqin.coding.net/p/my/d/document/git/raw/master/imgs/jiazhao/jiazhao_20180607001.png )
 
 ---
 
