--- a/docs/生活/随笔/二手车购买攻略.md
+++ b/docs/生活/随笔/二手车购买攻略.md
@@ -89,7 +89,7 @@ https://www.che168.com/maintenance/vincodesearch.html
 <br/>
 
 
-## 四、验车技巧
+## 四、验车知识
 
 购买二手车怎么验车，答案来自于AI助手。
 
@@ -234,50 +234,9 @@ https://www.che168.com/maintenance/vincodesearch.html
 <br/>
 
 
-## 五、小知识
 
-### 开车
 
-> 个人考驾照以及刚开始开车的记录。
-
-手动挡科目三需要刷身份证，绕车一周，模拟灯光等等。以下是开车停车的步骤：	<br/>
-1、调后视镜，调座椅，系安全带。	<br/>
-2、点火，开左转向灯（上右下左），按喇叭。	<br/>
-3、踩离合，踩刹车，放手刹，挂一档。	**半联动起步**:离合及刹车踩住后，慢慢抬离合，车身抖动（速度仪表盘指针微微转动）后，立刻松刹车，车子起步，慢慢松离合。（脚踏板：左 离合，中 刹车，右 加油）	<br/>
-
-4、换挡：速度10码左右换2档，20码左右换3档，40码左右换4档。换挡前踩离合，换挡，再慢慢松离合。	<br/>
-5、停车：开右转向灯，踩离合，慢踩刹车，停车，挂空挡，拉手刹，回转向灯，熄火。	<br/>
-
-注意： 掉头1档，转弯2档。提前3秒开转向灯。左脚踩离合，右脚正踩刹车、斜踩油门。
-
--- 201810
-
----
-
-自动挡开车知识点：	<br/>
-1、自动挡只有两个踏板，左边刹车，右边油门。	<br/>
-2、档位说明：N-空挡，P-停车挡，R-倒车档，D-开车行驶档。S-运动档。	<br/>
-3、开车时，左脚放在那里，不用动。右脚脚跟最好也固定住，**只用右脚脚尖轻点左边的刹车和右边的油门**。	<br/>
-4、自动挡车辆D档启动后，**不踩刹车和油门，车子会缓慢自动行驶**。	<br/>
-
--- 202402
-
----
-
-开车前检查四周，系安全带、踩刹车、放手刹、点火、挂D挡，缓缓启动。注意踩刹车才能换挡。                     <br/>
-开车要专心，眼观六路耳听八方，多看后视镜，让速不让道。                                                    <br/>
-控制车身与左边线距离，不需转头看左后视镜，直视前方观察**前挡风玻璃的3c标志与左边线的交点**即可。          <br/>
-走高速关键是要**保持车距**。不要超速违规行驶，无监控区可以快一点。                                        <br/>
-不要跟车，尤其和大车保持距离，否则容易挡住视线发生事故。                                                  <br/>
-变道前一定要打转向灯和看左右后视镜。                                                                      <br/>
-夜间行车、小镇村道行车一定要多看前方和左右，要慢一点。近光要打，远光需要再打。                            <br/>
-红绿灯前停车若要无顿挫感，可以多次轻点刹车，均匀减速，缓慢停车。                                          <br/>
-
--- 202505
-
----
-
-### 验车
+### 验车汇总
 
 > 上述三个AI助手关于验车回答的综合汇总。
 
@@ -313,4 +272,47 @@ https://www.che168.com/maintenance/vincodesearch.html
 链接: [一个纯小白如何买二手车]( https://zhuanlan.zhihu.com/p/509200669 ) &ensp; [二手车购买攻略](  https://gitlab.com/xuyq123/document/-/tree/main/article/%E9%9A%8F%E7%AC%94/%E4%BA%8C%E6%89%8B%E8%BD%A6%E8%B4%AD%E4%B9%B0%E6%94%BB%E7%95%A5.md  )
 
 
+## 五、开车技巧
 
+> 本人考驾照以及刚开始开车的记录。
+
+[驾考记事]( https://gitlab.com/xuyq123/document/-/blob/main/article/%E9%9A%8F%E7%AC%94/%E9%A9%BE%E8%80%83%E8%AE%B0%E4%BA%8B.md ) 
+
+手动挡科目三需要刷身份证，绕车一周，模拟灯光等等。以下是开车停车的步骤：	<br/>
+1、调后视镜，调座椅，系安全带。	<br/>
+2、点火，开左转向灯（上右下左），按喇叭。	<br/>
+3、踩离合，踩刹车，放手刹，挂一档。	**半联动起步**:离合及刹车踩住后，慢慢抬离合，车身抖动（速度仪表盘指针微微转动）后，立刻松刹车，车子起步，慢慢松离合。（脚踏板：左 离合，中 刹车，右 加油）	<br/>
+
+4、换挡：速度10码左右换2档，20码左右换3档，40码左右换4档。换挡前踩离合，换挡，再慢慢松离合。	<br/>
+5、停车：开右转向灯，踩离合，慢踩刹车，停车，挂空挡，拉手刹，回转向灯，熄火。	<br/>
+
+注意： 掉头1档，转弯2档。提前3秒开转向灯。左脚踩离合，右脚正踩刹车、斜踩油门。
+
+-- 201810 
+
+---
+
+自动挡开车知识点：	<br/>
+1、自动挡只有两个踏板，左边刹车，右边油门。	<br/>
+2、档位说明：N-空挡，P-停车挡，R-倒车档，D-开车行驶档。S-运动档。	<br/>
+3、开车时，左脚放在那里，不用动。右脚脚跟最好也固定住，**只用右脚脚尖轻点左边的刹车和右边的油门**。	<br/>
+4、自动挡车辆D档启动后，**不踩刹车和油门，车子会缓慢自动行驶**。	<br/>
+
+-- 202402
+
+---
+
+> 二零二五五一期间自驾行驶八百公里感受。
+
+开车前检查四周，系安全带、踩刹车、放手刹、点火、挂D挡，缓缓启动。注意踩刹车才能换挡。                     <br/>
+开车要专心，眼观六路耳听八方，多看后视镜，让速不让道。                                                    <br/>
+控制车身与左边线距离，不需转头看左后视镜，直视前方观察**前挡风玻璃的3c标志与左边线的交点**即可。          <br/>
+走高速关键是要**保持车距**。不要超速违规行驶，无监控区可以快一点。                                        <br/>
+不要跟车，尤其和大车保持距离，否则容易挡住视线发生事故。                                                  <br/>
+变道前一定要打转向灯和看左右后视镜。                                                                      <br/>
+夜间行车、小镇村道行车一定要多看前方和左右，要慢一点。近光要打，远光需要再打。                            <br/>
+红绿灯前停车若要无顿挫感，可以多次轻点刹车，均匀减速，缓慢停车。                                          <br/>
+
+-- 202505
+
+---
