--- a/docs/生活/随笔/我的原神旅行观测记录.md
+++ b/docs/生活/随笔/我的原神旅行观测记录.md
@@ -39,8 +39,8 @@
 | 5      | [莫娜占卜铺]( https://www.mona-uranai.com/intro )                          | https://www.mona-uranai.com/intro      					   | 工具 |
 | 6      | [原神伤害计算]( https://genshin-calc.sirokuma.cc/ )                        | https://genshin-calc.sirokuma.cc/      					   | 工具 |
 | 7      | [nga社区]( https://nga.178.com/thread.php?fid=650 )                        | https://nga.178.com/thread.php?fid=650 					   | 论坛 |
-| 8      | [TapTap]( https://www.taptap.cn/app/168332/topic )                 | https://www.taptap.cn/app/168332/topic 					   | 论坛 |
-| 9      | [贴吧]( https://tieba.baidu.com/f?kw=%E5%8E%9F%E7%A5%9E )              | https://tieba.baidu.com/f?kw=%E5%8E%9F%E7%A5%9E            | 论坛 |
+| 8      | [TapTap]( https://www.taptap.cn/app/168332/topic )                 		  | https://www.taptap.cn/app/168332/topic 					   | 论坛 |
+| 9      | [贴吧]( https://tieba.baidu.com/f?kw=%E5%8E%9F%E7%A5%9E )                  | https://tieba.baidu.com/f?kw=%E5%8E%9F%E7%A5%9E            | 论坛 |
 
 ---
 
@@ -63,16 +63,16 @@
 
 | 快捷键 | 快捷键 | 快捷键 | 快捷键 |
 | ------ | ------ | ------ | ------ |
-| **Q-元素爆发** | W-向前 | E-元素战技   | R-瞄准      |
-| Y-通知详情 | U-特殊环境说明 | O-好友   | P-中断挑战  |
-| **A-向左** | S-向后 | D-向右  | F-拾取 |
-| G-教程 | J-任务页面 | L-编队  |        |
-| **Z-小道具** | X-落下 | C-角色解密  | V-追踪   |
-| B-背包 | M-地图 |     |    |
-| **F1-冒险之证**  | F2-联机 | F3-抽卡祈愿 | F4-纪行  |
-| F5-活动  | F6-玩法系统  | F7-摆设   |    |
-| **12345-切换角色**  | 鼠标滚轮-元素视野  | 鼠标左键-普通攻击  |  鼠标右键或左shift-冲刺  |
-| ESC-派蒙界面  | space-跳跃 | Enter-聊天  | Ctrl-切换走路/跑步状态   |
+| **Q-元素爆发**  | W-向前 | E-元素战技 | R-瞄准       |
+| Y-通知详情 | U-特殊环境说明 | O-好友  | P-中断挑战   |
+| **A-向左** | S-向后         | D-向右  | F-拾取 	   |
+| G-教程     | J-任务页面     | L-编队  |              |
+| **Z-小道具**     | X-落下   | C-角色解密  | V-追踪   |
+| B-背包 		   | M-地图   |             |          |
+| **F1-冒险之证**  | F2-联机  | F3-抽卡祈愿 | F4-纪行  |
+| F5-活动          | F6-玩法系  | F7-摆设   |          |
+| **12345-切换角色**  | 鼠标滚轮-元素视野   | 鼠标左键-普通攻击 | 鼠标右键或左shift-冲刺  |
+| ESC-派蒙界面        | space-跳跃          | Enter-聊天        | Ctrl-切换走路/跑步状态  |
 
 
 <br/>
