--- a/docs/目录.md
+++ b/docs/目录.md
@@ -7,6 +7,7 @@
 > 随笔
 
   - [日常Note](生活/随笔/日常Note.md)
+  - [诗文浅作](生活/随笔/诗文浅作.md)
   - [驾考记事](生活/随笔/驾考记事.md)
   - [健身与学习](生活/随笔/健身与学习.md)
   - [吉他练习笔记](生活/随笔/吉他练习笔记.md)
