--- a/docs/生活/随笔/二手车购买攻略.md
+++ b/docs/生活/随笔/二手车购买攻略.md
@@ -282,12 +282,10 @@ https://www.che168.com/maintenance/vincodesearch.html
 1、调后视镜，调座椅，系安全带。	<br/>
 2、点火，开左转向灯（上右下左），按喇叭。	<br/>
 3、踩离合，踩刹车，放手刹，挂一档。	**半联动起步**:离合及刹车踩住后，慢慢抬离合，车身抖动（速度仪表盘指针微微转动）后，立刻松刹车，车子起步，慢慢松离合。（脚踏板：左 离合，中 刹车，右 加油）	<br/>
-
 4、换挡：速度10码左右换2档，20码左右换3档，40码左右换4档。换挡前踩离合，换挡，再慢慢松离合。	<br/>
 5、停车：开右转向灯，踩离合，慢踩刹车，停车，挂空挡，拉手刹，回转向灯，熄火。	<br/>
 
-注意： 掉头1档，转弯2档。提前3秒开转向灯。左脚踩离合，右脚正踩刹车、斜踩油门。
-
+注意： 掉头1档，转弯2档。提前3秒开转向灯。左脚踩离合，右脚正踩刹车、斜踩油门。 <br/>
 -- 201810 
 
 ---
@@ -297,8 +295,11 @@ https://www.che168.com/maintenance/vincodesearch.html
 2、档位说明：N-空挡，P-停车挡，R-倒车档，D-开车行驶档。S-运动档。	<br/>
 3、开车时，左脚放在那里，不用动。右脚脚跟最好也固定住，**只用右脚脚尖轻点左边的刹车和右边的油门**。	<br/>
 4、自动挡车辆D档启动后，**不踩刹车和油门，车子会缓慢自动行驶**。	<br/>
-
 -- 202402
+<br/>
+
+自动挡开车：调后视镜，调座椅，系安全带。**放手刹，挂P挡，踩油门，拧钥匙点火启动**。换D挡，车辆行驶。<br/>
+-- 202507
 
 ---
 
@@ -312,7 +313,6 @@ https://www.che168.com/maintenance/vincodesearch.html
 变道前一定要打转向灯和看左右后视镜。                                                                      <br/>
 夜间行车、小镇村道行车一定要多看前方和左右，要慢一点。近光要打，远光需要再打。                            <br/>
 红绿灯前停车若要无顿挫感，可以多次轻点刹车，均匀减速，缓慢停车。                                          <br/>
-
 -- 202505
 
 ---
